--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -53,7 +53,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>    
     <script language="javascript">
     $(document).ready(function () { 
-        var old_userid = document.getElementById("messageid").value;
+        var old_messageid = document.getElementById("messageid").value;
         
         // Get-Data Click function
         //
@@ -70,15 +70,15 @@
           });        
         });
         $('#messageid').focusin(function () {
-            old_userid = document.getElementById("userid").value;    
+            old_userid = document.getElementById("messageid").value;    
         });
         // If the user exits the userid textbox and places focus on another
         // GUI control on the screen, and if the user id had changed since
         // the user entered the box, then reload the user form
         $('#messageid').focusout(function () {
-            var curr_userid = document.getElementById("userid").value;    
+            var curr_messageid = document.getElementById("messageid").value;    
             //alert(curr_userid + '---' + old_userid)
-            if (curr_userid != old_userid)
+            if (curr_messageid != old_messageid)
                 getmessage();
         });
         
