Test:  Adding print statements to see if things are rendering.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -113,7 +113,10 @@
     
     // renders the user table
     function render(data)  {
-      $.each(data, function(index, message) { 
+      $.each(data, function(index, message) {
+          document.write("Okay we're rendering data apparently...");
+          document.write("Index: " + index);
+          document.write("Message: " + message);
           var newrow = "<tr><td id=\"messageid\"" + index + "\">"+ message.messageId + "</td>";
           newrow += "<td id=\"userid\">" + message.userId + "</td>";
           newrow += "<td id=\"message\">" + message.message + "</td></tr>";
