Slight change to how render_form() works.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -147,7 +147,7 @@
             $('#messageid').val(message.messageId);
             $('#userid').val(message.userId);
             $('#message').val(message.message);
-            getmessages();
+            render_clear(null);
         });
       else
       {
